Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,10 +18,8 @@ steps:
 
 
 - script: |
-    echo "Running tests..."
-    robot --output output.xml tests/
+    robot --output output.xml tests/  # Run Robot Framework tests
   displayName: 'Run Robot Framework Tests'
-  continueOnError: true  # This will allow the pipeline to continue and provide more logs
 
 - task: PublishTestResults@2
   inputs:
