--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,5 @@ steps:
   displayName: 'Install Robot Framework and dependencies'
 
 - script: |
-    robot tests/
+    robot robot_tests/
   displayName: 'Run Robot Framework tests'
