Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,9 @@ steps:
   displayName: 'Install Robot Framework and dependencies'
 
 - script: |
+    dir robot_tests
+  displayName: 'Debug: List Robot Test Files'
+
+- script: |
     robot robot_tests/
   displayName: 'Run Robot Framework tests'
