--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,9 +27,9 @@ steps:
     echo "Listing contents of repo root:"
     dir
     echo "Listing contents of robot_tests (if exists):"
-    dir robot_tests
+    dir robot_test
   displayName: 'Debug: Show directory contents'
   
 - script: |
-    robot robot_tests/
+    robot robot_test/
   displayName: 'Run Robot Framework tests'
