--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,8 +52,13 @@ steps:
     }
   displayName: 'Run Robot Framework tests'
   continueOnError: true
+  #6
+- script: |
+    echo "Listing files in $(Build.SourcesDirectory)/robot_results"
+    dir $(Build.SourcesDirectory)/robot_results
+  displayName: 'List Files in robot_results Directory'
 
-# 6. Publish Robot test results (if output.xml is available)
+# 7. Publish Robot test results (if output.xml is available)
 - task: PublishTestResults@2
   condition: succeededOrFailed()
   inputs:
