--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,7 +41,6 @@ steps:
     dir robot_test
   displayName: 'Debug: Show project structure'
 
-# 5. Run Robot Framework tests
 - script: |
     robot --variable BROWSER:edge ^
           --output $(ROBOT_REPORTS_DIR)/output.xml ^
@@ -49,6 +48,7 @@ steps:
           --report $(ROBOT_REPORTS_DIR)/report.html ^
           robot_test/
   displayName: 'Run Robot Framework Test'
+  continueOnError: true 
 
 # 6. Convert to JUnit format for test publishing
 - script: |
