Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,8 +40,8 @@ steps:
     echo "robot_test folder contents:"
     dir robot_test
   displayName: 'Debug: Show project structure'
-  #5. run the test scripts
 
+# 5. Run the test scripts
 - script: |
     robot --variable BROWSER:edge ^
           --output $(ROBOT_REPORTS_DIR)/output.xml ^
@@ -50,13 +50,6 @@ steps:
           robot_test/
   displayName: 'Run Robot Framework Test'
   continueOnError: true 
-  
-  
-- task: CmdLine@2
-  inputs:
-    script: |
-      robot test/
-  continueOnError: true
 
 # 6. Convert to JUnit format for test publishing
 - script: |
