--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,13 @@
-trigger:
-  branches:
-    include:
-      - main  # Trigger on push to main
+trigger: none  # Don’t trigger on code changes
 
-pool:
-  vmImage: 'windows-latest'
+resources:
+  pipelines:
+    - pipeline: AutomatedTesting
+      source: AutomatedTesting        # Must match pipeline A's name
+      trigger:
+        branches:
+          include:
+            - main
 
 variables:
   ROBOT_REPORTS_DIR: 'robot_results'
