--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,10 @@
-trigger: none  # Don’t trigger on code changes
+trigger: none  # Don't trigger on code changes
 
 resources:
   pipelines:
-    - pipeline: AutomatedTesting-.NET Desktop-CI
-      source: AutomatedTesting-.NET Desktop-CI      
-      trigger:
-        branches:
-          include:
-            - main                   # Trigger only when 'main' in AutomatedTesting runs
+    - pipeline: AutomatedTestingPipeline  # Alias used if needed in jobs
+      source: AutomatedTesting-.NET Desktop-CI
+      trigger: true  # Trigger when the source pipeline completes
 
 variables:
   ROBOT_REPORTS_DIR: 'robot_results'
@@ -25,11 +22,21 @@ steps:
 # 2. Install Robot Framework and SeleniumLibrary
 - script: |
     python -m pip install --upgrade pip
-    pip install robotframework
-    pip install robotframework-seleniumlibrary
+    pip install robotframework==6.1.1
+    pip install robotframework-seleniumlibrary==6.1.2
   displayName: 'Install Robot Framework and dependencies'
 
-# 3. Show Python and Robot installation info (debug step)
+# 3. (Optional) Download and set Edge WebDriver path
+- powershell: |
+    $ProgressPreference = 'SilentlyContinue'
+    $edgeVersion = (Get-ItemProperty "HKLM:\SOFTWARE\Microsoft\Edge\BLBeacon").version
+    $webDriverUrl = "https://msedgedriver.azureedge.net/$edgeVersion/edgedriver_win64.zip"
+    Invoke-WebRequest -Uri $webDriverUrl -OutFile edgedriver.zip
+    Expand-Archive -Path edgedriver.zip -DestinationPath "$(Agent.TempDirectory)\edgedriver"
+    echo "##vso[task.setvariable variable=PATH]$(Agent.TempDirectory)\edgedriver;$(PATH)"
+  displayName: 'Download and Set Edge WebDriver Path'
+
+# 4. Debug: Confirm installations
 - script: |
     where python
     where pip
@@ -37,7 +44,7 @@ steps:
     pip list
   displayName: 'Debug: Confirm installations'
 
-# 4. Show directory contents (helps confirm repo structure)
+# 5. Debug: Show project structure
 - script: |
     echo "Current directory:"
     cd
@@ -47,33 +54,38 @@ steps:
     dir robot_test
   displayName: 'Debug: Show project structure'
 
-# 5. Run the test scripts
+# 6. Ensure report directory exists
+- script: |
+    if not exist "$(ROBOT_REPORTS_DIR)" mkdir "$(ROBOT_REPORTS_DIR)"
+  displayName: 'Ensure robot_results directory exists'
+
+# 7. Run Robot Framework Test
 - script: |
     robot --variable BROWSER:edge ^
-          --output $(ROBOT_REPORTS_DIR)/output.xml ^
-          --log $(ROBOT_REPORTS_DIR)/log.html ^
-          --report $(ROBOT_REPORTS_DIR)/report.html ^
+          --output "$(ROBOT_REPORTS_DIR)\output.xml" ^
+          --log "$(ROBOT_REPORTS_DIR)\log.html" ^
+          --report "$(ROBOT_REPORTS_DIR)\report.html" ^
           robot_test/
   displayName: 'Run Robot Framework Test'
   continueOnError: true  # Continue even if tests fail
 
-# 6. Convert to JUnit format for test publishing
+# 8. Convert Robot Output to JUnit
 - script: |
-    rebot --xunit $(ROBOT_REPORTS_DIR)/xunit.xml $(ROBOT_REPORTS_DIR)/output.xml
+    rebot --xunit "$(ROBOT_REPORTS_DIR)\xunit.xml" "$(ROBOT_REPORTS_DIR)\output.xml"
   displayName: 'Convert Robot Output to JUnit'
-  condition: always()  # Always run even if previous step fails
+  condition: always()
 
-# 7. Publish test results to Azure DevOps
+# 9. Publish test results
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
-    testResultsFiles: '$(ROBOT_REPORTS_DIR)/xunit.xml'
+    testResultsFiles: '$(ROBOT_REPORTS_DIR)\xunit.xml'
     testRunTitle: 'Robot Framework Test Results'
-  condition: always()  # Always run
+  condition: always()
 
-# 8. Publish all Robot output files as an artifact
+# 10. Publish all Robot output files as artifacts
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: '$(ROBOT_REPORTS_DIR)'
     artifactName: 'RobotResults'
-  condition: always()  # Always run
+  condition: always()
