Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ resources:
 
 variables:
   ROBOT_REPORTS_DIR: 'robot_results'
+  rollbackNeeded: false  # Variable to control rollback
 
 pool:
   vmImage: 'windows-latest'
@@ -26,8 +27,7 @@ steps:
     pip install robotframework-seleniumlibrary==6.1.2
   displayName: 'Install Robot Framework and dependencies'
 
-
-# 4. Debug: Confirm installations
+# 3. Debug: Confirm installations
 - script: |
     where python
     where pip
@@ -35,7 +35,7 @@ steps:
     pip list
   displayName: 'Debug: Confirm installations'
 
-# 5. Debug: Show project structure
+# 4. Debug: Show project structure
 - script: |
     echo "Current directory:"
     cd
@@ -45,12 +45,12 @@ steps:
     dir robot_test
   displayName: 'Debug: Show project structure'
 
-# 6. Ensure report directory exists
+# 5. Ensure report directory exists
 - script: |
     if not exist "$(ROBOT_REPORTS_DIR)" mkdir "$(ROBOT_REPORTS_DIR)"
   displayName: 'Ensure robot_results directory exists'
 
-# 7. Run Robot Framework Test
+# 6. Run Robot Framework Test
 - script: |
     robot --variable BROWSER:edge ^
           --output "$(ROBOT_REPORTS_DIR)\output.xml" ^
@@ -60,13 +60,13 @@ steps:
   displayName: 'Run Robot Framework Test'
   continueOnError: true  # Continue even if tests fail
 
-# 8. Convert Robot Output to JUnit
+# 7. Convert Robot Output to JUnit
 - script: |
     rebot --xunit "$(ROBOT_REPORTS_DIR)\xunit.xml" "$(ROBOT_REPORTS_DIR)\output.xml"
   displayName: 'Convert Robot Output to JUnit'
   condition: always()
 
-# 9. Publish test results
+# 8. Publish test results
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'JUnit'
@@ -74,7 +74,27 @@ steps:
     testRunTitle: 'Robot Framework Test Results'
   condition: always()
 
-# 10. Publish all Robot output files as artifacts
+# 9. Check for test failures
+- script: |
+    [xml]$testResults = Get-Content "$(ROBOT_REPORTS_DIR)\output.xml"
+    $failures = $testResults.robot.tests.test.failures
+    if ($failures -gt 0) {
+      Write-Host "##vso[task.setvariable variable=rollbackNeeded]true"
+    } else {
+      Write-Host "##vso[task.setvariable variable=rollbackNeeded]false"
+    }
+  displayName: 'Check Test Failures'
+
+# 10. Rollback Deployment if Tests Failed
+- script: |
+    echo "Rolling back to previous stable version..."
+    # Add rollback logic here to deploy previous version
+    # For example, using Azure CLI to deploy the last stable version:
+    az webapp deploy --resource-group <resource-group> --name <webapp-name> --src <previous-version-artifact>
+  displayName: 'Rollback Deployment'
+  condition: eq(variables['rollbackNeeded'], 'true')
+
+# 11. Publish all Robot output files as artifacts
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: '$(ROBOT_REPORTS_DIR)'
