--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
   inputs:
     versionSpec: '3.11'
 
-# 2. Install Microsoft Edge WebDriver manually (Chocolatey not reliable)
+# 2. Install Microsoft Edge WebDriver manually
 - powershell: |
     $edgeVersion = (Get-Item "C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe").VersionInfo.ProductVersion
     Write-Host "Detected Edge version: $edgeVersion"
@@ -30,7 +30,6 @@ steps:
     Invoke-WebRequest -Uri $url -OutFile "edgedriver.zip"
     Expand-Archive -Path "edgedriver.zip" -DestinationPath "$(Build.SourcesDirectory)\edgedriver" -Force
 
-    # Add WebDriver folder to PATH
     $env:PATH += ";$(Build.SourcesDirectory)\edgedriver"
   displayName: 'Install Edge WebDriver manually'
 
@@ -74,6 +73,19 @@ steps:
   displayName: 'Run Robot Framework Test'
   continueOnError: true  # Continue even if tests fail
 
+# 7.5 Check if Robot tests failed and set pipeline failure
+- powershell: |
+    [xml]$robotOutput = Get-Content "$(ROBOT_REPORTS_DIR)\output.xml"
+    $failed = $robotOutput.output.statistics.total.stat | Where-Object { $_.fail -gt 0 }
+
+    if ($failed) {
+        Write-Error "Regression tests failed! Failing pipeline to trigger rollback."
+        exit 1
+    } else {
+        Write-Host "Regression tests passed!"
+    }
+  displayName: 'Check Robot Test Result and Fail Pipeline if Needed'
+
 # 8. Convert Robot Output to JUnit
 - script: |
     rebot --xunit "$(ROBOT_REPORTS_DIR)\xunit.xml" "$(ROBOT_REPORTS_DIR)\output.xml"
@@ -94,3 +106,12 @@ steps:
     pathToPublish: '$(ROBOT_REPORTS_DIR)'
     artifactName: 'RobotResults'
   condition: always()
+
+# 11. Rollback if regression tests fail
+- script: |
+    echo "Starting rollback process..."
+    echo "Here you should add your rollback steps (redeploy previous build, etc.)"
+    # Example placeholder rollback commands
+    # az webapp deployment source config-zip --resource-group <your-rg> --name <your-app-name> --src <path-to-previous-build.zip>
+  displayName: 'Rollback Deployment'
+  condition: failed()
